--- a/src/private/index.html
+++ b/src/private/index.html
@@ -56,6 +56,8 @@
         style="text-decoration: none;">Site issue with touch</a></li>
       <li><a href="mobile-parallax.html"
         style="text-decoration: none;">Mobile parallax</a></li>
+      <li><a href="mobile-parallax-fixedbg.html"
+        style="text-decoration: none;">Mobile parallax (fixed background)</a></li>
     </ul>
   </body>
 </html>
