--- a/src/private/mobile-parallax-fixedbg.html
+++ b/src/private/mobile-parallax-fixedbg.html
@@ -20,6 +20,7 @@
     position: relative;
     z-index: 0;
     height: 100vh;
+    overflow: hidden;
   }
   .title-desc-image, .title-desc-inner {
     position: absolute;
