--- a/public/ie8/index.html
+++ b/public/ie8/index.html
@@ -6,12 +6,15 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../stylesheet.css">
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
-<!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="ie8.css"/><![endif]-->
+<!--[if lt IE 9]>
+    <link rel="stylesheet" type="text/css" href="ie8.css"/>
+    <![endif]-->
 <link rel="icon" type="image/png" href="/images/favicon.png">
 <link rel="shortcut icon" href="/images/favicon.ico">
 <title>Internet Explorer 8</title>
 <![if !IE]>
-<style>@media only screen and (max-width: 800px) {
+<style>
+@media only screen and (max-width: 800px) {
       td {
         display: block;
         width: 100%;
@@ -19,7 +22,8 @@
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
       }
-    }</style>
+    }
+</style>
 <![endif]>
 </head>
 <body><a id="topOfPage"></a>
@@ -135,11 +139,13 @@
 <p>
 </p><p><a href="#topOfPage">↑ Back to top</a></p>
 <small>Changes last made on <span id="timestamp"></span></small>
-
+<p></p>
 </td></tr>
 </table>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<!--[if lt IE 9]><script src="http://cdn.jsdelivr.net/jquery.corner/2.13/jquery.corner.js"></script><![endif]-->
+<!--[if lt IE 9]>
+    <script src="http://cdn.jsdelivr.net/jquery.corner/2.13/jquery.corner.js"></script>
+    <![endif]-->
 <script async src="script.js"></script>
 </body>
 </html>
