--- a/src/private/index.html
+++ b/src/private/index.html
@@ -58,6 +58,12 @@
         style="text-decoration: none;">Mobile parallax</a></li>
       <li><a href="mobile-parallax-fixedbg.html"
         style="text-decoration: none;">Mobile parallax (fixed background)</a></li>
+      <li><a href="allowvr01.html"
+        style="text-decoration: none;">Allow VR 1</a></li>
+      <li><a href="allowvr02.html"
+        style="text-decoration: none;">Allow VR 2</a></li>
+      <li><a href="allowvr03.html"
+        style="text-decoration: none;">Allow VR 3</a></li>
     </ul>
   </body>
 </html>
