--- a/public/private/allowvr03.html
+++ b/public/private/allowvr03.html
@@ -6,4 +6,4 @@
       width: 100%;
       height: 100vh;
       border: 0;
-    }</style></head><body><iframe src="allowvr01.html" allowvr></iframe></body></html>
+    }</style></head><body><iframe src="allowvr01.html"></iframe></body></html>
