--- a/src/private/allowvr03.html
+++ b/src/private/allowvr03.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <iframe src="allowvr01.html" allowvr>
+    <iframe src="allowvr01.html">
     </iframe>
   </body>
 </html>
