--- a/src/private/index.html
+++ b/src/private/index.html
@@ -64,6 +64,8 @@
         style="text-decoration: none;">Allow VR 2</a></li>
       <li><a href="allowvr03.html"
         style="text-decoration: none;">Allow VR 3</a></li>
+      <li><a href="webvr01.html"
+        style="text-decoration: none;">Web VR 1</a></li>
     </ul>
   </body>
 </html>
