--- a/src/private/webvr01.html
+++ b/src/private/webvr01.html
@@ -4,14 +4,12 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style>
-    #webgl-canvas {
-      box-sizing: border-box;
-      height: 100%;
-      left: 0;
+    body {
       margin: 0;
-      position: absolute;
-      top: 0;
+    }
+    canvas {
       width: 100%;
+      height: 100%;
     }
     #log {
       width: 100%;
@@ -26,13 +24,25 @@
     </style>
   </head>
   <body>
-    <canvas id="webgl-canvas"></canvas>
-    <div id="log"></div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+		<script>
+		</script>
     <script>
     (function() {
-      var webglCanvas = document.getElementById("webgl-canvas");
+			var scene = new THREE.Scene();
+			var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+			var renderer = new THREE.WebGLRenderer();
+			var geometry = new THREE.BoxGeometry( 1, 1, 1 );
+			var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+			var cube = new THREE.Mesh( geometry, material );
       var vrDisplay = null;
       var count = 0;
+
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			document.body.appendChild(renderer.domElement);
+			scene.add( cube );
+			camera.position.z = 5;
+
       if (navigator.getVRDisplays) {
         navigator.getVRDisplays()
         .then(function(displays) {
@@ -40,7 +50,7 @@
             vrDisplay = displays[displays.length - 1];
             vrDisplay.requestAnimationFrame(onAnimationFrame);
             if (vrDisplay.capabilities.canPresent) {
-              vrDisplay.requestPresent([{source: webglCanvas}])
+              vrDisplay.requestPresent([{source: renderer.domElement}])
               .then(function () {
               }, function () {
                 log("requestPresent failed");
@@ -53,14 +63,21 @@
           log("getVRDisplays failed");
         });
       } else {
-        log("No VR displays found");
+        window.requestAnimationFrame(onAnimationFrame);
       }
+
       function onAnimationFrame() {
-        if (vrDisplay) {
-          if (count++ < 600) {
-            log(count);
+        if (count++ < 600) {
+          cube.rotation.x += 0.1;
+          cube.rotation.y += 0.1;
+          renderer.render(scene, camera);
+          if (vrDisplay) {
             vrDisplay.requestAnimationFrame(onAnimationFrame);
           } else {
+            window.requestAnimationFrame(onAnimationFrame);
+          }
+        } else {
+          if (vrDisplay) {
             vrDisplay.exitPresent()
             .then(function () {
             }, function () {
@@ -68,10 +85,6 @@
             });
           }
         }
-      }
-      function log(comment) {
-        var logger = document.getElementById("log");
-        logger.textContent = comment;
       }
     })();
     </script>
