--- a/public/private/webvr01.html
+++ b/public/private/webvr01.html
@@ -15,7 +15,8 @@
       font-family: Helvetica, Arial;
       font-size: 24pt;
       color: white;
-      border: 1px solid lightgray;      
+      border: 1px solid lightgray;
+      cursor: pointer;
     }</style></head><body><div id="log"></div><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script><script></script><script>(function() {
 			var scene = new THREE.Scene();
 			var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
@@ -26,6 +27,7 @@
       var webglCanvas = null;
       var vrDisplay = null;
       var count = 0;
+      var logger = document.getElementById("log"); 
 
 			renderer.setSize(window.innerWidth, window.innerHeight);
 			document.body.appendChild(renderer.domElement);
@@ -33,28 +35,39 @@
 			camera.position.z = 5;
       renderer.render(scene, camera);
       webglCanvas = renderer.domElement;
+      window.addEventListener("click", requestPresent, false);
 
       if (navigator.getVRDisplays) {
         navigator.getVRDisplays()
         .then(function(displays) {
           if (displays.length > 0) {
             vrDisplay = displays[displays.length - 1];
-            vrDisplay.requestAnimationFrame(onAnimationFrame);
-            if (vrDisplay.capabilities.canPresent) {
-              vrDisplay.requestPresent([{source: webglCanvas}])
-              .then(function () {
-              }, function () {
-                log("requestPresent failed");
-              });
-            } else {
-              log("!canPresent");
-            }
+            log("Enter VR");
+          } else {
+            log("No VR display");
           }
         }, function () {
           log("getVRDisplays failed");
         });
       } else {
-        window.requestAnimationFrame(onAnimationFrame);
+        log("VR not supported");
+      }
+
+      function requestPresent() {
+        if (vrDisplay) {
+          if (vrDisplay.capabilities.canPresent) {
+            vrDisplay.requestPresent([{source: webglCanvas}])
+            .then(function () {
+              vrDisplay.requestAnimationFrame(onAnimationFrame);
+            }, function () {
+              log("requestPresent failed");
+            });
+          } else {
+            log("!canPresent");
+          }
+        } else {
+          window.requestAnimationFrame(onAnimationFrame);
+        }
       }
 
       function onAnimationFrame() {
@@ -78,9 +91,8 @@
           }
         }
       }
-    })();
 
-    function log(comment) { 
-      var logger = document.getElementById("log"); 
-      logger.textContent = comment; 
-    }</script></body></html>
+      function log(comment) {
+        logger.textContent = comment; 
+      } 
+    })();</script></body></html>
