--- a/src/private/webvr01.html
+++ b/src/private/webvr01.html
@@ -93,6 +93,9 @@
           renderer.render(scene, camera);
           if (vrDisplay) {
             vrDisplay.requestAnimationFrame(onAnimationFrame);
+            if (vrDisplay.isPresenting) {
+              vrDisplay.submitFrame();
+            }
           } else {
             window.requestAnimationFrame(onAnimationFrame);
           }
