--- a/public/private/webvr01.html
+++ b/public/private/webvr01.html
@@ -5,19 +5,25 @@
       width: 100%;
       height: 100%;
     }
-    #log {
+    .output {
       position: absolute;
-      width: 100%;
-      height: 140px;
-      line-height: 140px;
+      height: 100px;
+      line-height: 100px;
       vertical-align: middle;
       text-align: center;
       font-family: Helvetica, Arial;
       font-size: 24pt;
       color: white;
       border: 1px solid lightgray;
+      box-sizing: border-box;
+    }
+    #logger {
+      width: 100%;
       cursor: pointer;
-    }</style></head><body><div id="log"></div><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script><script></script><script>(function() {
+    }
+    #counter {
+      width: 280px;
+    }</style></head><body><div id="logger" class="output"></div><div id="counter" class="output" contenteditable>300</div><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script><script></script><script>(function() {
 			var scene = new THREE.Scene();
 			var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
 			var renderer = new THREE.WebGLRenderer();
@@ -26,8 +32,8 @@
 			var cube = new THREE.Mesh( geometry, material );
       var webglCanvas = null;
       var vrDisplay = null;
-      var count = 0;
-      var logger = document.getElementById("log"); 
+      var logger = document.getElementById("logger");
+      var counter = document.getElementById("counter");
 
 			renderer.setSize(window.innerWidth, window.innerHeight);
 			document.body.appendChild(renderer.domElement);
@@ -35,7 +41,7 @@
 			camera.position.z = 5;
       renderer.render(scene, camera);
       webglCanvas = renderer.domElement;
-      window.addEventListener("click", requestPresent, false);
+      logger.addEventListener("click", requestPresent, false);
 
       if (navigator.getVRDisplays) {
         navigator.getVRDisplays()
@@ -71,8 +77,7 @@
       }
 
       function onAnimationFrame() {
-        if (count++ < 600) {
-          log(count);
+        if (countDown()) {
           cube.rotation.x += 0.1;
           cube.rotation.y += 0.1;
           renderer.render(scene, camera);
@@ -96,6 +101,16 @@
       }
 
       function log(comment) {
-        logger.textContent = comment; 
-      } 
+        logger.textContent = comment;
+      }
+
+      function countDown() {
+        var count = +counter.textContent;
+        if (count > 0) {
+          counter.textContent = --count;
+          return true;
+        }
+        counter.textContent = 0;
+        return false;
+      }
     })();</script></body></html>
