--- a/src/private/index.html
+++ b/src/private/index.html
@@ -3,6 +3,29 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <style>
+    body, ul {
+      margin: 0;
+      padding: 0;
+    }
+    li {
+      list-style: none;
+      border: 1px solid lightgray;
+      display: inline-block;
+      margin: 8px 0px 0px 8px;
+      padding: 8px;
+    }
+    a, a:visited {
+      color: black;
+    }
+    a:hover {
+      color: blue;
+    }
+    a:active {
+      color: gray;
+    }
+    </style>
   </head>
   <body>
     <ul style="font-family: Helvetica, Arial; font-size: 16pt;">
@@ -49,7 +72,7 @@
       <li><a href="filter04.html"
         style="text-decoration: none;">Blur on container, inline element and in table</a></li>
       <li><a href="https://developer.mozilla.org/samples/webgl/sample6/index.html"
-        style="text-decoration: none;">WebGL demo</a></li>
+        style="text-decoration: none;">WebGL demo <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="svgasimg01.html"
         style="text-decoration: none;">SVG-as-image</a></li>
       <li><a href="Z6310H.html"
@@ -59,11 +82,11 @@
       <li><a href="mobile-parallax-fixedbg.html"
         style="text-decoration: none;">Mobile parallax (fixed background)</a></li>
       <li><a href="allowvr01.html"
-        style="text-decoration: none;">Allow VR 1</a></li>
+        style="text-decoration: none;">Allow VR 1 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="allowvr02.html"
-        style="text-decoration: none;">Allow VR 2</a></li>
+        style="text-decoration: none;">Allow VR 2 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="allowvr03.html"
-        style="text-decoration: none;">Allow VR 3</a></li>
+        style="text-decoration: none;">Allow VR 3 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="webvr01.html"
         style="text-decoration: none;">Web VR 1</a></li>
     </ul>
