--- a/public/private/index.html
+++ b/public/private/index.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="/css/font-awesome.min.css"><style>body, ul {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="/css/font-awesome.min.css"><style>body {
+      margin: 0;
+      padding: 0 8px 8px 0;
+    }
+    ul {
       margin: 0;
       padding: 0;
     }
@@ -6,7 +10,7 @@
       list-style: none;
       border: 1px solid lightgray;
       display: inline-block;
-      margin: 8px 0px 0px 8px;
+      margin: 8px 0 0 8px;
       padding: 8px;
     }
     a, a:visited {
