--- a/src/private/index.html
+++ b/src/private/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <style>
-    body, ul {
+    body {
+      margin: 0;
+      padding: 0 8px 8px 0;
+    }
+    ul {
       margin: 0;
       padding: 0;
     }
@@ -13,7 +17,7 @@
       list-style: none;
       border: 1px solid lightgray;
       display: inline-block;
-      margin: 8px 0px 0px 8px;
+      margin: 8px 0 0 8px;
       padding: 8px;
     }
     a, a:visited {
