--- a/public/private/index.html
+++ b/public/private/index.html
@@ -12,6 +12,7 @@
       display: inline-block;
       margin: 8px 0 0 8px;
       padding: 8px;
+      box-shadow: 1px 1px 5px gray;
     }
     a, a:visited {
       color: black;
