--- a/public/private/webvr01.html
+++ b/public/private/webvr01.html
@@ -30,7 +30,11 @@
       #counter {
         width: 100px;
       }
-    }</style><script>var WebVRConfig = {DEFER_INITIALIZATION: true};</script><script src="webvr-polyfill.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script></head><body><div id="logger" class="output"></div><div id="counter" class="output" contenteditable>300</div><script>(function() {
+    }</style><script>var WebVRConfig = {
+      FORCE_ENABLE_VR: true,
+      MOUSE_KEYBOARD_CONTROLS_DISABLED: true,
+      DEFER_INITIALIZATION: true
+    };</script><script src="webvr-polyfill.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script></head><body><div id="logger" class="output"></div><div id="counter" class="output" contenteditable>300</div><script>(function() {
       'use strict';
 
       var scene = new THREE.Scene();
@@ -53,11 +57,15 @@
       scene.add(cylinder);
       camera.position.z = 5;
       resize();
-      initVR();
 
       logger.addEventListener('click', requestPresent, false);
       window.addEventListener('resize', resize, false);
       window.addEventListener('keydown', onKeyDown, false);
+
+      if (!navigator.getVRDisplays) {
+        InitializeWebVRPolyfill();
+      }
+      initVR();
 
       function initVR() {
         if (navigator.getVRDisplays) {
@@ -73,7 +81,7 @@
             log('getVRDisplays failed');
           });
         } else {
-          log('VR not supported');
+          log('Failed to initialize polyfill');
         }
       }
 
@@ -129,9 +137,10 @@
       }
 
       function onKeyDown(args) {
-        if (args.code === "Space" && !vrDisplay) {
-          InitializeWebVRPolyfill();
-          initVR();
+        if (args.code === "Space") {
+          log('Animate');
+          vrDisplay = null;
+          requestPresent();
         }
       }
 
